--- a/GoodVibes.Traffic.Api/GoodVibes.Traffic.Api.csproj
+++ b/GoodVibes.Traffic.Api/GoodVibes.Traffic.Api.csproj
@@ -8,6 +8,17 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\GoodVibes.Traffic.Domain\GoodVibes.Traffic.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Update="ships.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
