--- a/GoodVibes.Traffic.Api/GoodVibes.Traffic.Api.csproj
+++ b/GoodVibes.Traffic.Api/GoodVibes.Traffic.Api.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\GoodVibes.Traffic.Domain\GoodVibes.Traffic.Domain.csproj" />
+        <ProjectReference Include="..\GoodVibes.Traffic.Services\GoodVibes.Traffic.Services.csproj" />
     </ItemGroup>
 
     <ItemGroup>
