[Serilog] Added serilog config

--- a/GoodVibes.Traffic.Api/appsettings.json
+++ b/GoodVibes.Traffic.Api/appsettings.json
@@ -6,5 +6,31 @@
     }
   },
   "AISStream" : "",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.ApplicationInsights"
+    ],
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "System": "Information",
+        "Microsoft": "Information",
+        "Microsoft.EntityFrameworkCore.Database": "Information",
+        "WiseCommerce": "Information",
+        "WiseCommerce.Admin.Modules.Messaging.Application": "Debug"
+      }
+    },
+    "WriteTo": [
+      "Console",
+      {
+        "Name": "ApplicationInsights",
+        "Args": {
+          "connectionString": "",
+          "restrictedToMinimumLevel": "Information",
+          "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
+        }
+      }
+    ]
+  }
 }
