--- a/GoodVibes.Traffic.Api/appsettings.json
+++ b/GoodVibes.Traffic.Api/appsettings.json
@@ -2,7 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.WebSockets": "Debug",
+      "Microsoft.AspNetCore.Server.Kestrel": "Debug"
     }
   },
   "AISStream" : "",
