[OpenAIApi] Added integration

--- a/GoodVibes.Traffic.Api/GoodVibes.Traffic.Api.csproj
+++ b/GoodVibes.Traffic.Api/GoodVibes.Traffic.Api.csproj
@@ -16,12 +16,16 @@
 
     <ItemGroup>
         <ProjectReference Include="..\GoodVibes.Traffic.Domain\GoodVibes.Traffic.Domain.csproj" />
+        <ProjectReference Include="..\GoodVibes.Traffic.Infrastructure\GoodVibes.Traffic.Infrastructure.csproj" />
         <ProjectReference Include="..\GoodVibes.Traffic.Services\GoodVibes.Traffic.Services.csproj" />
     </ItemGroup>
 
     <ItemGroup>
         <Content Update="ships.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+        <Content Update="ships-analitic.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
 
