--- a/GoodVibes.Traffic.Api/appsettings.json
+++ b/GoodVibes.Traffic.Api/appsettings.json
@@ -7,6 +7,10 @@
       "Microsoft.AspNetCore.Server.Kestrel": "Debug"
     }
   },
+  "OpenAI": {
+    "ApiKey": "",
+    "OrganizationId": ""
+  },
   "AISStream" : "",
   "AllowedHosts": "*",
   "Serilog": {
