--- a/GoodVibes.Traffic.Api/appsettings.json
+++ b/GoodVibes.Traffic.Api/appsettings.json
@@ -7,11 +7,9 @@
       "Microsoft.AspNetCore.Server.Kestrel": "Debug"
     }
   },
-  "OpenAI": {
-    "ApiKey": "",
-    "OrganizationId": ""
-  },
-  "AISStream" : "",
+  "OpenAIApiKey": "",
+  "OpenAIOrganizationId": "",
+  "AISStream": "",
   "AllowedHosts": "*",
   "Serilog": {
     "Using": [
